<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".user.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppEditText"
            android:drawableLeft="@drawable/ic_user"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppEditText"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:hint="@string/password"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppButton"
            android:text="@string/login"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>
        
        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:gravity="center"
            android:textSize="@dimen/font_normal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_large" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="@dimen/font_large"
            android:textColor="@color/colorTextPrimary"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>


        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppButtonHollow"
            android:text="@string/sign_up"
            android:textAllCaps="true"/>

    </LinearLayout>


</RelativeLayout>
