<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".user.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppEditText"
            android:drawableLeft="@drawable/ic_user"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:hint="@string/name"/>

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppEditText"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:hint="@string/email"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppEditText"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:hint="@string/password"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppEditText"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:hint="@string/confirm_password"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <EditText
            android:id="@+id/edtContactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppEditText"
            android:inputType="number"
            android:maxLength="10"
            android:drawableLeft="@drawable/ic_contact"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:hint="@string/contact_number"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppButton"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>
        


    </LinearLayout>


</RelativeLayout>
