<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:gravity="center"
            android:layout_marginTop="@dimen/space_normal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_selected_circle"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_selected_step"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_selected_circle"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:text="@string/use_default_pickup_address"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/font_normal"/>

            <Switch
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_normal" />

        <EditText
            android:id="@+id/edtNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppEditText"
            android:hint="@string/number"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <EditText
            android:id="@+id/edtAddressOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppEditText"
            android:hint="@string/address_one"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <EditText
            android:id="@+id/edtAddressTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppEditText"
            android:hint="@string/address_two"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <EditText
            android:id="@+id/edtContactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppEditText"
            android:inputType="number"
            android:maxLength="10"
            android:hint="@string/contact_number"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <Spinner
                android:id="@+id/spinnerProvince"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:spinnerMode="dropdown">

            </Spinner>

            <Spinner
                android:id="@+id/spinnerState"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:spinnerMode="dropdown">

            </Spinner>

        </LinearLayout>


        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppButton"
            android:text="@string/next"
            android:textAllCaps="true"/>

    </LinearLayout>
</RelativeLayout>
