<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".base.BaseActivity">

    <LinearLayout
        android:id="@+id/container_body"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        android:gravity="center">

        <FrameLayout
            android:id="@+id/baseFrame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9.2">

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="horizontal"
            android:weightSum="4"
            android:background="@color/colorNotSelectedTab">

            <LinearLayout
                android:id="@+id/layoutPickup"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="1"
                android:gravity="center"
                android:background="@color/colorAccent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextPrimary"
                    android:text="@string/request"/>

            </LinearLayout>

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"/>

            <LinearLayout
                android:id="@+id/layoutOrders"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextPrimary"
                    android:text="@string/order_list"/>

            </LinearLayout>

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"/>

            <LinearLayout
            android:id="@+id/layoutNotifications"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="1"
            android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextPrimary"
                    android:text="@string/notifications"/>

            </LinearLayout>

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"/>

            <LinearLayout
                android:id="@+id/layoutAccount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextPrimary"
                    android:text="@string/my_account"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
