<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/rowLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:weightSum="2"
        android:orientation="vertical"
        android:background="@color/colorRow">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="@string/category"
                android:gravity="center_vertical"
                android:textSize="@dimen/font_small"/>

            <TextView
                android:id="@+id/txtCategory"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:textSize="@dimen/font_small"
                android:gravity="center_vertical"
                android:textColor="@color/colorTextPrimary"/>

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:textSize="@dimen/font_small"
                android:gravity="center_vertical"
                android:textColor="@color/colorTextPrimary"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="@string/order_no"
                android:gravity="center_vertical"
                android:textSize="@dimen/font_small"/>

            <TextView
                android:id="@+id/txtOrderNo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:textSize="@dimen/font_small"
                android:gravity="center_vertical"
                android:textColor="@color/colorTextPrimary"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="@string/status"
                android:gravity="center_vertical"
                android:textSize="@dimen/font_small"/>

            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="0.2"
                android:textSize="@dimen/font_small"
                android:layout_margin="4dp"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>